06-traefik2-kubedashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.192.168.1.52.nip.io`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
  tls:
    certResolver: myresolver
